--- a/web-server/src/main/web/index.html
+++ b/web-server/src/main/web/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="./styles/init.css">
     <link rel="stylesheet" href="./styles/display.css">
     <link rel="stylesheet" href="./styles/main.css">
-    <title>Document</title>
+    <title>bangbang101-frame</title>
 </head>
 <body>
     <main>
-        <img class="img" src="C:\\Users\\asu\\Downloads\\d82fea33880411ebb6edd017c2d2eca2.jpg" alt="background">
+        <img class="background" src="C:\\Users\\asu\\Downloads\\d82fea33880411ebb6edd017c2d2eca2.jpg" alt="background">
         <section>
             <div class="nameContent">
                 <h2 class="name">monoliths</h2>
@@ -21,6 +21,8 @@
             </div>
         </section>
     </main>
+    <script src="./js/functions.js"></script>
+    <script src="./js/run.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
