--- a/web/index.html
+++ b/web/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ch">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>dialogue</title>
+    <script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
+    <script src="./js/html2canvas.js"></script>
+    <script src="./js/script.js"></script>
     <link rel="stylesheet" href="./styles/init.css">
-    <link rel="stylesheet" href="./styles/display.css">
-    <link rel="stylesheet" href="./styles/main.css">
-    <title>bangbang101-frame</title>
+    <link rel="stylesheet" href="./styles/dialogue.css">
 </head>
+
 <body>
-    <main>
-        <img class="background" src="./resources/backgrounds/2973d421eeff41088404ef8ab2f9284e.jpg" alt="background">
-        <section>
-            <div class="nameContent">
-                <h2 class="name">monoliths</h2>
-            </div>
-            <div class="textContent">
-                <span class="text">测试文字</span>
-            </div>
-        </section>
+    <main class="content">
+        <ul class="list">
+        </ul>
     </main>
-    <script src="./js/functions.js"></script>
-    <script src="./js/run.js"></script>
-    <script src="./js/main.js"></script>
 </body>
+
 </html>
